--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/lab": "^5.0.0-alpha.81",
     "@mui/material": "^5.7.0",
+    "@react-google-maps/api": "^2.12.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -29,8 +30,10 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
     "rehype-raw": "^6.1.1",
+    "use-places-autocomplete": "^3.0.0",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "@reach/combobox": "^0.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,7 +58,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "proxy":"http://localhost:8000/"
+    "proxy": "http://localhost:8000/"
   }
- 
 }
