--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "rehype-raw": "^6.1.1",
     "use-places-autocomplete": "^3.0.0",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11",
-    "@reach/combobox": "^0.17.0"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
